--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@k_wang/onecli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "enter": "./bin/enter.js"
+    "onecli": "./bin/enter.js"
   },
   "dependencies": {
     "chalk": "^4.0.0",
